--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@archer-edu/create-initializer",
+  "name": "@viewdo/create-initializer",
   "description": "Create your own `create-something` app.",
   "version": "1.2.0",
-  "author": "ClassicOldSong <yukino@yuki.network>",
+  "author": "archer-edu",
+  "private": false,
   "scripts": {
     "test": "jest"
   },
@@ -42,5 +43,8 @@
     "create-app",
     "create-create-app",
     "create-initializer"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
